# server/api/openapi-with-docs.json
@@ -6,90 +6,6 @@
     "version": "1.0.0"
   },
   "paths": {
-    "/Login": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "operationId": "Auth_Login",
-        "requestBody": {
-          "x-name": "dto",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/LoginRequestDto"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/JwtResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/Register": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "operationId": "Auth_Register",
-        "requestBody": {
-          "x-name": "dto",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterRequestDto"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/JwtResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/WhoAmI": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "operationId": "Auth_WhoAmI",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/JwtClaims"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/Player/GetAllPlayers": {
       "get": {
         "tags": [
@@ -148,50 +64,6 @@
   },
   "components": {
     "schemas": {
-      "JwtResponse": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "token": {
-            "type": "string"
-          }
-        }
-      },
-      "LoginRequestDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        }
-      },
-      "RegisterRequestDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "email": {
-            "type": "string",
-            "format": "email"
-          },
-          "password": {
-            "type": "string",
-            "minLength": 8
-          }
-        }
-      },
-      "JwtClaims": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "string"
-          }
-        }
-      },
       "Player": {
         "type": "object",
         "additionalProperties": false,
@@ -206,9 +78,6 @@
             "type": "string"
           },
           "passwordhash": {
-            "type": "string"
-          },
-          "salt": {
             "type": "string"
           },
           "createdat": {
@@ -231,9 +100,6 @@
             "type": "string"
           },
           "passwordhash": {
-            "type": "string"
-          },
-          "salt": {
             "type": "string"
           },
           "createdat": {
